css/travel_c_index_1.css
body {
    margin: 0;
    padding: 0;
}

.header {
    margin: 0;
    background-color: #e1e1e1;
}

.h-medals {
    background-size: contain;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-image: url(../img/Tours-2015-1.png);   
}

.h-logo {
    height: 130px;
    text-align: center;
    /*background-size: contain;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-image: url(../img/friends_logo.jpg);*/
}

.h-logo img {
    max-height: 120px;
}

.h-logo a {
    outline: none;
}

.h-contacts {
    text-align: center;
}


.main-menu {
    height: 44px;
    padding: 1px 0;
}

.main-menu ul {
    padding: 1px 0;
    margin: auto;
    height: 42px;
    background-color: white;
}

.main-menu li {
    float: left;
    list-style: none;
    margin: auto;
    padding: 6px 0;
    box-sizing: border-box;
    width: 14.285%;
    height: 40px;
    text-transform: uppercase;
    text-align: center;
    font-weight: 500;
    vertical-align: middle;
}
 
.main-menu p {
    text-decoration: none;
    color: #006386;
}   

.main-menu #pull {  
    display: none;  
}

.main-menu a {
    text-decoration: none;
}

.main-menu a:hover {
    color: #006386;
}

.menu-fix {
    position: fixed;
    width: 100%;
    top: 0;
    padding: 0;
    margin-bottom: 0;
    text-align: center;
    z-index: 1000;
}

@media screen and (max-width: 960px) {  
    .main-menu {   
        height: 80px;  
    }  
    .main-menu ul {  
        width: 100%;  
        height: auto;
        display: inline-block;
        background-color: white;  
    }  
    .main-menu li {  
        width: 25%;  
        float: left;  
        position: relative;  
    }    
    .main-menu a {  
        text-decoration: none;
        text-align: left;  
        width: 100%;  
        text-indent: 25px;  
    }
    .main-menu a:hover {
    color: #006386;
    }
}

@media only screen and (max-width : 500px) {  
    .main-menu {  
        height: 30px;  
    }  
    .main-menu ul {  
        display: none;
    }  
    .main-menu p#pull {
        display: block;
        height: 30px;
        background-color: white;  
        width: 100%;  
    }
    .main-menu p#pull:after {  
        content:"";  
        background: url('nav-icon.png') no-repeat;  
        width: 30px;  
        height: 30px;  
        display: inline-block;  
        position: absolute;  
        right: 15px;  
        top: 10px;  
    } 
    .main-menu li {  
        display: block;  
        float: none;  
        width: 100%;  
    }  
    .main-menu li a {  
        border-bottom: 1px solid #576979;  
    }  
}

.main-slider {
    margin: 0;
    padding: 0;
    min-height: 640px;
    width: 100%;
    text-align: center;
    /*background-position: 50% 50%;
    background-size: cover;
    background-repeat: no-repeat;
    background-image: url(../img/pic-1.jpg);*/
}

#slides {
    position: relative;
    height: 640px;
    padding: 0px;
    margin: 0px;
    list-style-type: none;
}
 
.slide {
    position: absolute;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
    opacity: 0;
    z-index: 1;
    background-position: 50% 50%;
    background-size: cover;
    background-repeat: no-repeat;
    
    -webkit-transition: opacity 1s;
    -moz-transition: opacity 1s;
    -o-transition: opacity 1s;
    transition: opacity 1s;
}
 
.showing {
    opacity: 1;
    z-index: 2;
}

.slide:nth-of-type(1) {
    background-image: url(../img/pic-1.jpg);
}

.slide:nth-of-type(2) {
    background-image: url(../img/pic-2.jpg);
}

.slide:nth-of-type(3) {
    background-image: url(../img/pic-4.jpg);
}

.btn-sl {
    width: auto;
    height: 45px;
    margin-top: 30%;
    padding: 5px;
    vertical-align: bottom;
    border-style: none;
    background-color: rgb(254, 227, 92);
    text-transform: uppercase;
    color: #000;
    font-size: 18px;
    font-weight: 300;
    cursor: pointer;
}


.about-us {
    padding: 20px;
    text-align: center;
    background-color: rgb(242, 242, 242);
}

.reviews {
    padding: 20px;
    text-align: center;
}

.rev-nav {
    margin: 10px;
    padding: 0;
    text-align: center;
}

.rev-nav .btn-outline-primary {
    font-size: 16px;
    padding: 12px;
}

.rev-nav .btn-outline-secondary {
    font-size: 30px;
    padding: 2px 14px;
}

@media screen and (max-width: 980px) {
    .rev-nav .btn-outline-primary {
        font-size: 12px;
        padding: 8px;
    }

.rev-nav .btn-outline-secondary {
        font-size: 20px;
        padding: 2px 8px;
    }
}

.reviews .card-img-top {
    width: 60%;
}

.reviews .card-title {
    float: left;
    width: 60%;
}

.reviews .card-customer {
    float: right;
    width: 35%;
    border-radius: 50%;
    position: absolute;
    right: 2%;
    top: 10%;
}

.reviews .layer {
    margin: 10px 10px 24px 10px;
    padding-top: 10px;
    text-align: left;
    vertical-align: baseline;
    font-size: 14px;
    overflow: auto;
    overflow-x: hidden;
    max-height: 240px;
}


.reviews .text-muted {
    position: absolute;
    right: 2%;
    bottom: 2%;
}


.up-tours {
    padding: 20px;
    text-align: center;
    background-color: rgb(242, 242, 242);
}

.tour-card1 {
    opacity: 1;
    margin: 0;
    padding-top: 20px;
    min-height: 280px;
    width: 100%;
    background-image: url(../img/cp1.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 50%;
}

.tour-card2 {
    opacity: 1;
    margin: 0;
    padding-top: 20px;
    min-height: 280px;
    width: 100%;
    background-image: url(../img/pic-1.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 50%;
}

.tour-card3 {
    opacity: 1;
    margin: 0;
    padding-top: 20px;
    min-height: 280px;
    width: 100%;
    background-image: url(../img/cp3.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 50% 50%;
}

.cards a {
    text-decoration: none;
    color: #000;
}

.tour-overlay {
    padding-top: 0;
    /*background: rgba(0, 0, 0, 0.45) none repeat scroll 0 0;*/
    opacity: 0.4;
    width: 100%;
    text-align: center;
}

.tour-overlay:hover {
    opacity: 1;
}

.tour-button {
    background-color: #006386;
    border: medium none;
    color: #fff;
    display: inline-block;
    text-transform: uppercase;
    font-size: 18px;
    font-weight: 100;
    margin-top: 125px;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 5px;
    padding-top: 5px;
    /*position: relative;*/
    width: 120px;
}

.soci-icons {
    text-align: center;
}

.footer {
    background-color: #e1e1e1;
    margin: 0 auto;
    min-height: 240px;
    
    text-align: center;
}

.footer h5 {
    margin-top: 10px;
    text-transform: uppercase;
}

.footer p {
    padding: 20px;
    text-align: left;
}

.footer form {
    padding: 20px;
    text-align: left;
}

.sign-form input {
    height: 36px;
    margin-top: 10px;
    margin-bottom: 10px;
    padding-left: 7px;
    font-size: 16px;
}

.sign-form button {
    background-color: #006386;
    border-style: none;
    font-size: 100%;
    color: white;
    padding: 6px 14px;
    cursor: pointer;
}


.clear{
    clear: both;
}

